# mnn_test

./: README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  MnnTestModule.cpp
android/app/src/main/java/com/anonymous/test_mnn/: MainActivity.kt  MainApplication.kt  MnnTestModule.kt  MnnTestPackage.kt  ModelExtractor.kt
android/app/src/main/jni/: CMakeLists.txt  ModelJni.cpp  ModelJni.h  OnLoad.cpp
android/app/src/main/jni/opencv-mobile-4.13.0-android-nomp/sdk/native/jni/abi-arm64-v8a/: OpenCVModules.cmake
android/app/src/main/jni/opencv-mobile-4.13.0-android-nomp/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
android/app/src/main/jni/opencv-mobile-4.13.0-android-nomp/sdk/native/jni/abi-x86_64/: OpenCVModules.cmake
android/app/src/main/res/values/: strings.xml
app/: native-test.tsx
app/(tabs)/: _layout.tsx  native-demo.tsx
docs/: TURBOMODULE_FACE_DETECTION_GUIDE.md  TURBO_MODULE_GUIDE.md
ios/: IOSModelLoaderBridge.h  Podfile  iOSModelLoader.h  iOSModelLoader.mm
ios/testmnn/: AppDelegate.swift  Info.plist  testmnn-Bridging-Header.h
ios/testmnn.xcodeproj/: project.pbxproj
ios/testmnn.xcodeproj/xcshareddata/xcschemes/: testmnn.xcscheme
ios/testmnn.xcworkspace/: contents.xcworkspacedata
native/: MnnTestModule.ts
shared/: NativeFaceDetector.cpp  NativeFaceDetector.h  NativeSampleModule.cpp  NativeSampleModule.h
specs/: NativeSampleModule.ts
